2020-05-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>


	Rmove some files which are inluded in Emacs.

	* hmac-def.el: Removed.

	* hex-utils.el: Removed.

	* sasl-ntlm.el: Removed.

	* FLIM-ELS (flim-modules, hmac-modules): Remove removed files.

2020-05-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Suppress byte-compiler's warnings.

	* eword-decode.el (eword-decode-header): Add obsolete date.

	* eword-encode.el: Fix dependency.
	(eword-encode-header, eword-in-subject-p)
	(eword-encode-field-body): Add obsolete date.

	* mime-def.el: Remove dependecy on static.el.
	(eval-when-compile): Assume Emacs24 or later.
	(mime-message-structure): Add obsolete date.

	* mime-parse.el: Fix dependency.
	(mime-parse-parameters-from-list): Add obsolete date.

	* qmtp.el (qmtp-via-qmtp): Add obsolete date.

	* smtp.el (smtp-via-smtp): Add obsolete date.

	* std11.el (std11-parse-in-reply-to): Add obsolete date.

2020-05-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Drop old platforms support, dependency on cl.el.  Now supported
	Emacsen are version 24 and later.

	* FLIM-ELS: Assume Emacs version 24 or later.

	* eword-encode.el: Likewise.

	* md5.el: Likewise.

	* mel-q-ccl.el: Likewise.

	* mel-q.el: Likewise.

	* mel.el: Likewise.

	* sha1.el: Likewise.

	* eword-decode.el: Use cl-lib instead of cl.

	* md5-dl.el: Removed.

	* md5-el.el: Removed.

	* mel-b-ccl.el: Removed.

	* mel-b-dl.el: Removed.

	* mel-b-el.el: Removed.

	* sha1-el.el: Removed.

	* sha1-dl.el: Removed.

	* md4.el: Removed.  Included in Emacs.

	* ntlm.el: Removed.  Included in Emacs.

	* smtpmail.el: Removed.  Included in Emacs.

2020-03-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* sasl-xoauth2.el (sasl-xoauth2-response): Fix typo in variable name.

2020-02-28  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* sasl.el (sasl-mechanism-alist, sasl-mechanisms): Add OAUTHBEARER
	as alias for XOAUTH2.

2019-05-26  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-decode.el (eword-decode-token): Escape characters which